# piper_gripper_camera_ros

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
config/: camera_info.yaml
include/piper_gripper_camera/: piper_gripper_camera_node.hpp
launch/: piper_gripper_camera.launch.py
scripts/: find_camera_serial.sh
src/: piper_gripper_camera_node.cpp
udev/: 99-piper-gripper-camera.rules
